<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:orientation="vertical"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/tvMovieDetailsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/title_color"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/cardDetailsFavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Spiderman: Across the Spider-Verse" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDetailsFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkDetailsFavorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/add_to_favorite_button"
            android:backgroundTint="@color/title_color"
            android:button="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/subtitle_color"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieDetailsTitle"
        tools:ignore="TextContrastCheck"
        tools:text="2022 ● Ciencia Ficción, Aventura, Acción, Misterio, Terror, Comedia, Romance, Drama ● 2h 19m"
        tools:visibility="gone" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieDetails"
        tools:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="7.2" />

        <RatingBar
            android:id="@+id/movieRatingBar"
            style="?attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="@color/orange"
            android:rating="4.15"
            android:scaleX=".7"
            android:scaleY=".7"
            android:secondaryProgressTint="@android:color/transparent"
            android:stepSize="0.5"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/dividerRating"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutRating" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSynopsisTitle"
        style="@style/DetailsTitleStyle"
        android:layout_marginHorizontal="16dp"
        android:text="@string/movie_synopsis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerRating" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSynopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:text="@string/example_overview"
        android:textColor="@color/subtitle_color"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSynopsisTitle"
        tools:ignore="TextContrastCheck"
        tools:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSynopsisReadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSynopsis">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSynopsisReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_synopsis_read_more"
                android:textColor="@color/orange"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivSynopsisReadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_down"
                android:tint="@color/orange"
                tools:ignore="ImageContrastCheck" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/dividerSynopsis"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardSynopsisReadMore" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieCastTitle"
        style="@style/DetailsTitleStyle"
        android:layout_marginHorizontal="16dp"
        android:text="@string/movie_cast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerSynopsis" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCastSeeMore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvMovieCastTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMovieCastTitle">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCastSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:padding="0dp"
            android:text="@string/details_see_more"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovieCast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieCastTitle"
        tools:visibility="gone" />

    <View
        android:id="@+id/dividerCast"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvMovieCast" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieProductionTitle"
        style="@style/DetailsTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/movie_production_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerCast" />

    <GridLayout
        android:id="@+id/layoutProduction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:columnOrderPreserved="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMovieProductionTitle"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieDirectorsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_directors_title"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieDirectorsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            tools:text="John Lasseter\nLee Unkrich\nAsh Brannon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieProductorsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_productors_title"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieProductorsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            tools:text="John Lasseter\nLee Unkrich\nAsh Brannon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieScreenplayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_screenplay_title"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieScreenplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            tools:text="John Lasseter\nLee Unkrich\nAsh Brannon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieCompaniesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_companies_title"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieCompaniesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            tools:text="John Lasseter\nLee Unkrich\nAsh Brannon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieHomepageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_homepage_title"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMovieHomepageLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="8dp"
            android:autoLink="web"
            android:textColor="@color/subtitle_color"
            android:textSize="16sp"
            tools:text="http://www.foxmovies.com/movies/fight-club" />

    </GridLayout>

    <View
        android:id="@+id/dividerProduction"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@color/button_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProduction" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMoviesRecommendedTitle"
        style="@style/DetailsTitleStyle"
        android:layout_marginHorizontal="16dp"
        android:text="@string/details_recommended"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerProduction"
        tools:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecommendedSeeMore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="visible"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tvMoviesRecommendedTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMoviesRecommendedTitle"
        tools:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRecommendedSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackground"
            android:padding="0dp"
            android:text="@string/details_see_more"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMoviesRecommended"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingHorizontal="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMoviesRecommendedTitle"
        tools:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>
