<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background"
            app:layout_anchor="@+id/appbar_layout"
            app:layout_anchorGravity="center"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:titleTextAppearance="@style/ExpandedTitleStyle"
            tools:title="@string/home_title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutToolbarButtons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:visibility="visible"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnHomeSearch"
                    style="@style/ToolbarButtonStyle"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnChangeDisplay"
                    style="@style/ToolbarButtonStyle"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_display_small"
                    android:tint="@color/title_color"
                    android:visibility="gone"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:visibility="visible" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/searchBarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnSearchBack"
                    style="@style/SearchBackButtonStyle"
                    tools:ignore="TouchTargetSizeCheck" />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/svSearchMovie"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/search_bar"
                    app:iconifiedByDefault="false"
                    app:queryBackground="@android:color/transparent"
                    app:queryHint="@string/search_title" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:defaultNavHost="true"
            app:navGraph="@navigation/home_graph" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="32dp"
            android:contentDescription="@string/fab_up_description"
            android:src="@drawable/ic_arrow_up"
            app:backgroundTint="@color/orange"
            app:maxImageSize="38dp"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bnvMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bar_background"
            app:elevation="16dp"
            app:labelVisibilityMode="labeled"
            app:itemIconTint="@color/bottom_menu_icon_color"
            app:itemTextColor="@color/bottom_menu_icon_color"
            app:menu="@menu/bottom_menu" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/toolbarDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/button_color"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
